<resources>
    <string name="app_name">GlowGuide</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="_email">Email</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">LOGOUT</string>
    <string name="loading">Loading</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone">Phone</string>
    <string name="_phone">Phone</string>
    <string name="_password">Password</string>
    <string name="_name">Name</string>
    <string name="edit_email">Email</string>
    <string name="save">SAVE</string>
    <string name="hello_world">Hello World</string>
    <string name="notification_time">08 : 45 PM</string>
    <string name="select_time">Select Time</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="add_notification">Add Notification</string>
    <string name="explore_nearby_places">Explore Clinics And Stores</string>
    <string name="a" />
    <string name="insert_text_here_to_show_the_button_s_action_and_functionality">Insert text here to show the button\'s action and functionality</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="facial_skin_care">Facial Skin Care</string>
    <string name="at_least_twice_a_day">At least twice a day</string>
    <string name="once_a_day">Once a day</string>
    <string name="rarely">Rarely</string>
    <string name="mark_what_best_describes_your_complexion">Mark what best describes your complexion:</string>
    <string name="my_facial_skin_is_dry_hard">My facial skin is dry/hard</string>
    <string name="my_facial_skin_is_oily_in_certain_areas">My facial skin is oily in certain areas</string>
    <string name="the_skin_of_my_face_is_very_oily">The skin of my face is very oily</string>
    <string name="mark_the_problems_you_faced_in_the_last_4_weeks">Mark the problems you faced in the last 4 weeks:</string>
    <string name="acne_pimples">Acne/pimples</string>
    <string name="redness">Redness</string>
    <string name="irritation_due_to_shaving">Irritation due to shaving</string>
    <string name="none_of_these">none of these</string>
    <string name="how_does_your_skin_feel_at_the_end_of_the_day">How does your skin feel at the end of the day?</string>
    <string name="my_facial_skin_feels_very_tight">My facial skin feels very tight</string>
    <string name="my_facial_skin_feels_clean_and_pleasant">My facial skin feels clean and pleasant</string>
    <string name="i_feel_like_my_t_zone_is_dry">I feel like my T-zone is dry</string>
    <string name="NewQuestionnaire">New Questionnaire</string>
    <string name="your_skin_type_will_be_displayed_here">Your skin type will be displayed here</string>
    <string name="submit">submit</string>
    <string name="how_much_water_do_you_drink_during_the_day">How much water do you drink during the day?</string>
    <string name="does_not_drink_during_the_day">Does not drink during the day</string>
    <string name="_0_5_cups">0–5 cups</string>
    <string name="_5_cups_or_more">5 cups or more</string>
    <string name="describe_your_facial_skin_after_using_facial_soap">Describe your facial skin after using facial soap:</string>


</resources>