<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

    <Button
        android:id="@+id/addNotificationBtn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="36dp"
        android:text="@string/add_notification"
        android:textSize="26sp" />


    <Button
        android:id="@+id/exploreNearbyPlacesBtn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="36dp"
        android:text="@string/explore_nearby_places"
        android:textSize="26sp" />

</LinearLayout>
