<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EBF5"
    tools:context=".editProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layoutDirection="ltr"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="_name"
            android:ems="10"
            android:inputType="text"
            android:text="@string/_name"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="_name"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="text"
            android:text="@string/edit_email"
            tools:ignore="LabelFor,TextFields" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="_phone"
            android:ems="10"
            android:inputType="text"
            android:text="@string/_phone"
            tools:ignore="LabelFor,TextFields" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="_password"
            android:ems="10"
            android:inputType="text"
            android:text="@string/_password"
            tools:ignore="LabelFor,TextFields" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#D0E7FF"
            android:text="@string/save" />


    </LinearLayout>

</RelativeLayout>