<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EBF5"
    tools:context=".ChangePasswordActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layoutDirection="ltr"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UselessParent"
        >

        <EditText
            android:id="@+id/currentPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="current_password"
            android:hint="@string/current_password"
            android:inputType="text"
            android:padding="15dp"
            android:textColorHint="#546E7A"
            android:textSize="18sp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="new_password"
            android:hint="@string/new_password"
            android:inputType="text"
            android:padding="15dp"
            android:textSize="18sp"
            android:textColorHint="#546E7A"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/updatePasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#D0E7FF"
            android:text="@string/update_password"
            android:textSize="18sp"
            android:textColor="#000000"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>